--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://DenitsaRuseva.github.io/portfolio",
+  "homepage": "http://DenitsaRuseva.github.io",
   "name": "art",
   "version": "0.1.0",
   "private": true,
